structural-typing/tests/ui/greet_requires_name.stderr
error[E0599]: the method `greet` exists for struct `User<user::FieldSet<Absent>>`, but its trait bounds were not satisfied
  --> tests/ui/greet_requires_name.rs:16:10
   |
 3 | #[structural]
   | ------------- method `greet` not found for this struct because it doesn't satisfy `<user::FieldSet<Absent> as Fields>::name = Present`
...
16 |     user.greet();
   |          ^^^^^
   |
note: trait bound `<user::FieldSet<Absent> as Fields>::name = Present` was not satisfied
  --> tests/ui/greet_requires_name.rs:8:22
   |
 8 | impl<F: user::Fields<name = Present>> User<F> {
   |                      ^^^^^^^^^^^^^^   -------
   |                      |
   |                      unsatisfied trait bound introduced here
